// Original file: src/proto/payment.proto


export interface UserSubscriptionPlan {
  '_id'?: (string);
  'userId'?: (string);
  'monthly'?: (number);
  'yearly'?: (number);
  'lifetime'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface UserSubscriptionPlan__Output {
  '_id'?: (string);
  'userId'?: (string);
  'monthly'?: (number);
  'yearly'?: (number);
  'lifetime'?: (number);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
